<resources>
    <string name="app_name">Paws n Claws</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_pet_care">Pet Care</string>
    <string name="title_adoption">Adoption</string>
    <string name="title_lost_n_found">Lost and Found</string>
    <string name="title_pet_service">Pet Service</string>
    <string name="title_help">Help</string>
    <string name="title_about_us">About Us</string>
    <string name="title_logout">Log Out</string>
    <string name="title_other">Other</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">What is This</string>
    <string name="expo2">expo 2</string>
    <string name="description2">expo3</string>
    <string name="homepage_title">Latest Notice</string>
</resources>
